统一核心架构,优化稳定性,为后续更新26.1版本做准备